Release history for Statocles-AppRole-ExtraFeeds

{{$NEXT}}
 - Bugfix: Avoid test failures with -Ddefault_inc_excludes_dot

 [Dependencies::Stats]
 - Dependencies changed since 0.001002, see misc/*.deps* for details
 - develop: +1 ↑1 (suggests: ↑2)
 - test: ↓1

0.001002 2016-02-26T06:52:21Z 8cbb246
 - Remove unused import in tests that will break in a future Statocles release

0.001001 2016-02-25T00:34:57Z 57745c3
 - Bump version on Beam::Wire for interop with Beam::Wire 'with' mechanics.

 [Dependencies::Stats]
 - Dependencies changed since 0.001000, see misc/*.deps* for details
 - configure: +2
 - develop: +1
 - test: ↑1

0.001000 2016-02-24T15:13:45Z 55ebf9f
 - First version.