@@ -38,7 +38,7 @@ my %WriteMakefileArgs = (
     "Path::Tiny" => 0,
     "Scalar::Util" => 0,
     "Statocles::App::Blog" => 0,
-    "Statocles::Test" => 0,
+    "Statocles::Test" => "0.075",
     "Term::ANSIColor" => 0,
     "Test::Deep" => 0,
     "Test::More" => 0,
@@ -66,7 +66,7 @@ my %FallbackPrereqs = (
   "Statocles::App" => "0.070",
   "Statocles::App::Blog" => 0,
   "Statocles::Page::List" => 0,
-  "Statocles::Test" => 0,
+  "Statocles::Test" => "0.075",
   "Term::ANSIColor" => 0,
   "Test::Deep" => 0,
   "Test::More" => 0,
