@@ -243,4 +243,5 @@ Dist::Zilla::Plugin::UploadToCPAN = 0
 -raw = |# Interop for "with"
 -raw = |runtime_requires("Beam::Wire",1.016) if has_module("Beam::Wire","<1.016");
 
-[Prereqs]
+[Prereqs / TestRequires]
+Statocles::Test = 0.075
