@@ -24,5 +24,6 @@ srcreadme         = mkdn
 -raw = |# Interop for "with"
 -raw = |runtime_requires("Beam::Wire",1.016) if has_module("Beam::Wire","<1.016");
 
-[Prereqs]
+[Prereqs / TestRequires]
+Statocles::Test = 0.075
 
